--- a/install_apache.yml
+++ b/install_apache.yml
@@ -6,14 +6,33 @@
   - name: update repository index
     apt:
       update_cache: yes
-
+    when: ansible_distribution in ["Linux Mint","Ubunto"]
 
   - name: install apache2 package
     apt:
       name: apache2
       state: latest
+    when: ansible_distribution == "Linux Mint"
 
   - name: add php support for apache
     apt:
       name: libapache2-mod-php
       state: latest
+    when: ansible_distribution == "Linux Mint"
+
+  - name: update repository index
+    dnf:
+      update_cache: yes
+    when: ansible_distribution == "CentOS"
+
+  - name: install apache2 package
+    dnf:
+      name: httpd
+      state: latest
+    when: ansible_distribution == "CentOS"
+
+  - name: add php
+    dnf:
+      name: php
+      state: latest
+    when: ansible_distribution == "CentOS"
